# polar-plotter

./: .gitignore  .mcp.json  AUDIT.md  CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  PICO2W.md  README.md  TCP_PCB_EXHAUSTION_BUG.md  lwipopts.h  pico_sdk_import.cmake  polar_plotter_wiring.md  process-halt-bug-fix.md  sdkconfig.defaults
ai-training/: HANDOFF.md  LEARNINGS.md  PROTOCOL.md  README.md  klee_principles.md
ai-training/sessions/2026-06-30-foundations/: session.json
components/servo/: CMakeLists.txt  servo.c
components/tmc5072/: CMakeLists.txt  tmc5072.c
console/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  truchet_preview_test.ts  tsconfig.json
console/scripts/: train-render.ts
console/test/: arcfit.test.ts  compile.test.ts  digest.test.ts  fill.test.ts  gcode-export.test.ts  geom.test.ts  gridScript.test.ts  image-linework.test.ts  image-surface.test.ts  image-tones.test.ts  mask.test.ts  paramstore.test.ts  patterns.test.ts  patterns2.test.ts  pipeline.test.ts  progress.test.ts  registry.test.ts  runpipeline.test.ts  shapes.test.ts  streamqueries.test.ts  studiodoc.test.ts  text.test.ts  toolpath.test.ts  warp.test.ts
docs/: BUG_gcode_stops_midway.md  HOSTING_ON_PI.md  OVERVIEW.md  STUDIO_ARCHITECTURE.md  motion_native_tmc5072.md
docs/v1.3/: 02-fields-and-registry.md  03-geometry-core.md  04-travel-and-simplify.md  05-modifier-pipeline.md  06-text-image-maps.md  07-preview-progress.md  ARCHITECTURE.md  README.md  ROADMAP.md  SCHEDULE.md
main/: CMakeLists.txt  board_config.h  kinematics.h  main.c  web_server.c  web_server.h
plotter-mcp/: AGENT_GUIDE.md  DESKTOP_SYSTEM_PROMPT.md  build-core.mjs  core.js  index.js  package-lock.json  package.json  pipeline.js  test-script-parse.mjs
plotter-mcp/examples/: grid-random-walker-2x2.json
scratchpad/: build-round14.mjs  build-round15.mjs  build-round16.mjs  build-round17.mjs  build-round18.mjs  build-round19.mjs  build-round20.mjs  build-round21.mjs  build-round22.mjs
tools/kinematics_test/: test_kinematics.c
tools/weave/: circle.py  draw_weave.py  home_loop.py  kinematics.py  line.py  preview.py  square.py  stream.py  truchet.py
(+196 files in other folders)
